--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="img/browser.png">
     <meta charset="utf-8">
     <title>Massoterapia - Will Fisio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -123,7 +124,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito Rolf e Deep Tissue)</span></h3>
-                            <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova a recuperação eficaz. </p>
+                            <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
                         </div>
                     </div>
