--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="img/browser.png">
     <meta charset="utf-8">
-    <title>Massoterapia - Will Fisio</title>
+    <title>Massoterapia - Dr. Will</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -36,7 +36,7 @@
                 <div class="d-inline-flex align-items-center">
                     <small><i class="fa fa-phone-alt mr-2"></i>+11 974237159</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>williamotavio@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</small>
                 </div>
             </div>
             <div class="col-lg-6 text-right">
@@ -67,7 +67,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary"><span class="text-dark">Will</span> Fisio</h1>
+                <h1 class="m-0 text-primary"><span class="text-dark">Dr.</span> Will</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -562,12 +562,12 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white"><span class="text-primary">Will</span> Fisio</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary">Dr. </span> Will</h1>
                     </a>
                     <p>Tratamento baseado em evidências com seriedade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios comprovados para relaxamento e saúde.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
-                    <p><i class="fa fa-envelope mr-2"></i>williamotavio@gmail.com</p>
+                    <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
                     <div class="d-flex justify-content-start mt-4">
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -618,10 +618,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white">&copy; <a href="#">https://willfisio.github.io/</a>. Todos os direitos reservados.</p>
+                    <p class="m-0 text-white">&copy; <a href="#">https://drwill.com.br/</a>. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Desenvolvido por <a href="https://htmlcodex.com">Will Fisio & HTML Codex</a></p>
+                    <p class="m-0 text-white">Desenvolvido por <a href="https://htmlcodex.com">William Souto & HTML Codex</a></p>
                 </div>
             </div>
         </div>
