--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="img/browser.png">
     <meta charset="utf-8">
-    <title>Massoterapia - Dr. Will</title>
+    <title>Dr. Will - Terapias manuais e integrativas</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -111,7 +111,7 @@
                     <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Revitalize-se com a Massagem Sueca, a chave para o seu equilíbrio e bem-estar. Deixe o estresse para trás com essa técnica que tem como intuito relaxar seus músculos, melhorar a circulação e proporcionar uma sensação de profundo relaxamento.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -122,7 +122,7 @@
                     <img class="position-absolute w-100 h-100" src="img/lib.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito Rolf e Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Desbloqueie seu potencial físico com a Liberação Miofascial. Reduza dores, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -133,7 +133,7 @@
                     <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Revitalize seu corpo e mente com nossa Massagem Relaxante. Desperte uma sensação de tranquilidade, alívio do estresse e renovação completa.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -144,7 +144,7 @@
                     <img class="position-absolute w-100 h-100" src="img/drenag.jpeg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Experimente a Drenagem Linfática, uma técnica comprovada para reduzir o inchaço, promover a desintoxicação e melhorar a circulação. Sinta-se revitalizado e com uma sensação de leveza em seu corpo.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -155,7 +155,7 @@
                     <img class="position-absolute w-100 h-100" src="img/ventosabig.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Integrativas</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Ventosaterapia</h3>
                             <p class="mx-md-5 px-5">Descubra a antiga arte da Ventosaterapia e experimente seus benefícios terapêuticos. As ventosas são aplicadas estrategicamente para promover a circulação sanguínea, aliviar a tensão muscular e melhorar a saúde geral. Libere as toxinas e encontre alívio natural com a Ventosaterapia.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
@@ -262,7 +262,7 @@
                 <img class="img-fluid" src="img/service-3.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
-                    <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de massoterapia inigualável.</p>
+                    <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de terapia inigualável.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Agendar</a>
                     </div>
@@ -486,7 +486,7 @@
                         <img class="img-fluid" src="img/foto.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <p class="m-0">Massoterapeuta & <br>graduando em fisioterapia</p>
+                                <p class="m-0">Terapeuta manual & <br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -593,7 +593,7 @@
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massage Sueca (Clássica)</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
                             </div>
