--- a/tree.html
+++ b/tree.html
@@ -54,7 +54,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           
           <div class="header_svg_item">
           <a href="https://www.linkedin.com/in/willsouto/" target="_blank" rel="nofollow">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve" style="padding-top: 4px">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve">
 
                 <defs>
                 </defs>
@@ -151,6 +151,9 @@ https://github.com/ardacarofficial/links-website is open source project.
         </a>
           <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
           <button class="main_button_item">QRCodes</button>
+        </a>
+          <a class="main_a_item" href="https://lattes.cnpq.br/2388059456660725" target="_blank" rel="nofollow">
+          <button class="main_button_item">Currículo lattes</button>
         </a>
       </section>
       <!-- Menu Container 1 Codes End -->
