--- a/tree.html
+++ b/tree.html
@@ -88,7 +88,7 @@ https://github.com/ardacarofficial/links-website is open source project.
             
         </div>
           <div class="header_svg_item">
-          <a href="mailto:contato@drwill.com.br?subject=Assunto da Mensagem" target="_blank" rel="nofollow">
+          <a href="mailto:contato@drwill.com.br?subject=Assunto da Mensagem">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="45" height="45" viewBox="0 0 256 256" xml:space="preserve">
 
 <defs>
@@ -156,6 +156,21 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Currículo lattes</button>
         </a>
       </section>
+        <div class="header_svg_item">
+          <a href="#link" target="_blank" rel="nofollow">
+            <img src="img/QRcontato.png" />
+          </a>
+        </div>
+        <div class="header_svg_item">
+          <a href="#link" target="_blank" rel="nofollow">
+            <img src="img/QRsite.png" />
+          </a>
+        </div>
+        <div class="header_svg_item">
+          <a href="#link" target="_blank" rel="nofollow">
+            <img src="img/QRwhats.png" />
+          </a>
+        </div>
       <!-- Menu Container 1 Codes End -->
 
       <!-- Menu Container 2 Codes Start 
