--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>links-website</title>
+    <title>Dr. Will - Terapias manuais, integrativas e fisioterapia</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -156,6 +156,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Currículo lattes</button>
         </a>
       </section>
+        <div class="header_svg_list flex_row_center">
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
             <img src="img/QRcontato.png" />
@@ -170,6 +171,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a href="#link" target="_blank" rel="nofollow">
             <img src="img/QRwhats.png" />
           </a>
+        </div>
         </div>
       <!-- Menu Container 1 Codes End -->
 
