--- a/tree.html
+++ b/tree.html
@@ -156,20 +156,20 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Currículo lattes</button>
         </a>
       </section>
-        <div class="header_svg_list flex_row_center">
+        <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
-            <img src="img/QRcontato.png" />
+            <img src="img/QRcontato.png" /> <p>Contato</p>
           </a>
         </div>
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
-            <img src="img/QRsite.png" />
+            <img src="img/QRsite.png" /><p>Site</p>
           </a>
         </div>
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
-            <img src="img/QRwhats.png" />
+            <img src="img/QRwhats.png" /><p>WhatsApp</p>
           </a>
         </div>
         </div>
