--- a/tree.html
+++ b/tree.html
@@ -27,8 +27,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/foto.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1 class="header_h_item">Dr. Will</h1>
-        <h2 class="header_h_item">Terapeuta Manual e integrativo</h2>
+        <h1 class="header_h_item">William Souto</h1>
+        <h2 class="header_h_item">Terapias manuais, integrativas e fisioterapia</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -149,9 +149,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <a class="main_a_item" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="nofollow">
           <button class="main_button_item">Contato</button>
         </a>
-          <a class="main_a_item" href="#link" target="_blank" rel="nofollow">
-          <button class="main_button_item">QRCodes</button>
-        </a>
+          
           <a class="main_a_item" href="https://lattes.cnpq.br/2388059456660725" target="_blank" rel="nofollow">
           <button class="main_button_item">Currículo lattes</button>
         </a>
